The issue is with the relationship between UserDetailsService and UserService. I'm working on registration and auth
